fix: IFS-728: Prevent cut off and too high checkboxes in modal dialog

--- a/src/less/es/forms.less
+++ b/src/less/es/forms.less
@@ -504,3 +504,14 @@ select.form-control {
     padding-top: 5px;
   }
 }
+
+
+// Prevents jumping / to high checkboxes in modal dialogs
+.modal-dialog .checkbox {
+  span:before {
+    margin-top: 4px;
+  }
+  label {
+    min-height: 24px;
+  }
+}
